force-app/main/default/objects/ServiceAppointment/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <formula>CASE(
    TEXT(Status),

    &quot;Scheduled&quot;,
    &quot;Confirmação de agendamento para o início do Projeto &quot; &amp; AppointmentNumber,

    &quot;Scheduled - Updated&quot;,
    &quot;Alteração de agendamento para o Projeto &quot; &amp; AppointmentNumber,

    &quot;Canceled&quot;,
    &quot;Cancelamento de agendamento para o Projeto &quot; &amp; AppointmentNumber,

    /* default */
    &quot;Agendamento para o Projeto &quot; &amp; AppointmentNumber
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailSubject</label>
    <type>Text</type>
</CustomField>