force-app/main/default/objects/ServiceAppointment/fields/External_UUID__c.field-meta.xml
<CustomField>
    <fullName>External_UUID__c</fullName>
    <description>This field is used as the external identifier for ADEO. Because the standard Salesforce record ID does not comply with the UUID format, a custom UUID is generated upon creation of the Service Appointment. The value is globally unique and ensures cross-system consistency.</description>
    <externalId>true</externalId>
    <inlineHelpText>System-generated unique identifier used for integration with ADEO. This field is read-only.</inlineHelpText>
    <label>External UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>