force-app/main/default/objects/ServiceAppointment/fields/Sent_to_ADEO__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_ADEO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will flag the Service Appointments that got sent to ADEO</description>
    <label>Sent to ADEO</label>
    <type>Checkbox</type>
</CustomField>